[tool.poetry]
name = "pytube-dlr"
version = "0.1.0"
description = ""
authors = ["Kevin Marques <kevinmarqueskmp@gmail.com>"]
readme = "README.md"
packages = [{include = "pytube_dlr"}]

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.3.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
sphinx-rtd-theme = "^1.2.0"
sphinx-autodocgen = "^1.3"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true

[mypy-mypy.nodes.EmptyNode]
ignore_errors = true

[tool.poetry.scripts]
pytube-dlr = "pytube_dlr.app:setup"
